Some Java8 conversions.  Mostly of the Alexa code